пытаюсь попасть в выпадающее меню с клавиатуры

--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ a {
 }
 
 .catalog:hover > .catalog-navigation,
-.catalog-link:focus ~ .catalog-navigation {
+.catalog:focus > .catalog-navigation {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
