--- a/css/style.css
+++ b/css/style.css
@@ -186,15 +186,24 @@ a {
 .user-block {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-end;
 
   width: 500px;
   padding-top: 8px;
   margin-bottom: 40px;
 }
 
+.user-block-options {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .user-block a {
   position: relative;
+
+  display: block;
   min-width: 80px;
   color: #000000;
   padding-left: 25px;
@@ -202,8 +211,7 @@ a {
 }
 
 .user-block .login {
-  position: relative;
-  margin-right: 160px;
+  margin-right: auto;
 }
 
 .login::before {
@@ -216,6 +224,10 @@ a {
   content: "";
 
   background-image: url("../img/svg/user-icon.svg")
+}
+
+.compare {
+  margin-right: 45px;
 }
 
 .compare::before {
@@ -840,11 +852,15 @@ a {
   background-position: 671px 5px;
 }
 
+/* ------- Блок с бренд-ссылками -------- */
+
 .brand-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   width: 1160px;
   margin: 0 auto;
+  margin-bottom: 100px;
   padding: 0;
 
   list-style: none;
@@ -882,4 +898,401 @@ a {
 .vive:hover,
 .vive:focus {
   background-image: url("../img/logo-vive-hover.jpg")
+}
+
+/* ---------- "О нас" и "Контакты" --------- */
+
+.information-block {
+  display: flex;
+  width: 1160px;
+  margin: 0 auto;
+  padding-top: 44px;
+  margin-bottom: 81px;
+}
+
+.about {
+  width: 50%;
+}
+
+.contacts {
+  width: 50%;
+  padding-left: 16px;
+}
+
+.about h2,
+.contacts h2 {
+  position: relative;
+  margin: 0;
+  margin-bottom: 44px;
+  padding: 0;
+  width: 560px;
+  text-align: left;
+
+  font-family: 'gilroyextrabold';
+  font-size: 47px;
+  line-height: 48px;
+  letter-spacing: 0.47px;
+  text-align: left;
+  color: #000000;
+}
+
+.about h2::before,
+.contacts h2::before {
+  position: absolute;
+  top: -52px;
+  left: 0px;
+  content: "";
+
+  width: 80px;
+  height: 7px;
+  background-color: #000000;
+}
+
+.about p {
+  width: 475px;
+  margin-bottom: 30px;
+}
+
+.contacts p {
+  width: 515px;
+  margin-bottom: 30px;
+}
+
+.delivery-options {
+  margin: 0;
+  margin-bottom: 55px;
+  padding: 0;
+  padding-top: 35px;
+  padding-left: 33px;
+
+  font-family: 'gilroyextrabold';
+  font-size: 16px;
+  line-height: 40px;
+  text-align: left;
+  color: #000000;
+
+  list-style: none;
+
+}
+
+.delivery-options li{
+  position: relative;
+}
+
+.delivery-options li::before {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -38px;
+
+  content: "";
+  width: 18px;
+  height: 18px;
+
+  background-image: url("../img/svg/list-style.svg");
+  background-size: contain;
+  opacity: 0.3;
+}
+
+.contacts img {
+  display: block;
+  box-sizing: content-box;
+  padding-top: 8px;
+  margin-bottom: 71px;
+}
+
+.about-link,
+.mail-link {
+  position: relative;
+
+  display: block;
+  width: 260px;
+  height: 40px;
+  padding-top: 8px;
+
+  font-family: 'gilroyextrabold';
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 3.6px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #000000;
+}
+
+.about-link::before,
+.mail-link::before {
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 0px;
+  transform: translateY(-50%);
+  content: "";
+
+  width: 260px;
+  height: 8px;
+  background-color: #f0c52e;
+
+  transition: height 0.2s ease-in;
+}
+
+.about-link:hover::before,
+.about-link:focus::before,
+.mail-link:hover::before,
+.mail-link:focus::before {
+  height: 40px;
+}
+
+.about-link:active,
+.mail-link:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+/*--- Footer ---*/
+.site-footer {
+  background-color: #464646;
+}
+
+.footer-container {
+  position: relative;
+  display: flex;
+  width: 1160px;
+  min-height: 323px;
+  margin: 0 auto;
+  padding-top: 65px;
+}
+
+.footer-container::after {
+  position: absolute;
+  bottom: 79px;
+  left: -2px;
+  content: "";
+
+  width: 80px;
+  height: 7px;
+
+  background-color: #ffc600;
+}
+
+.footer-left-block {
+  width: 355px;
+}
+
+.footer-devicelogo-link {
+  display: block;
+  width: 163px;
+  height: 35px;
+  margin-bottom: 30px;
+
+  font-size: 0px;
+
+  background-image: url("../img/svg/device-logo-yellow.svg");
+}
+
+.footer-devicelogo-link:hover,
+.footer-devicelogo-link:focus {
+  opacity: 0.6;
+}
+
+.footer-devicelogo-link:active {
+  opacity: 0.3;
+}
+
+.footer-left-block p {
+  color: #ffffff;
+}
+
+/* ------------- footer-center-block ------------------ */
+
+.footer-center-block {
+  width: 450px;
+  padding-top: 71px;
+}
+
+.footer-services-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0;
+  margin-bottom: 48px;
+  padding: 0;
+
+  list-style: none;
+}
+
+
+.footer-services-list li a {
+  display: block;
+  width: 145px;
+  height: 40px;
+
+  font-family: 'gilroyextrabold';
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 3.6px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #ffffff;
+}
+
+.footer-services-list li a:hover,
+.footer-services-list li a:focus {
+  opacity: 0.6;
+}
+
+.footer-services-list li a:active {
+  opacity: 0.3;
+}
+
+.footer-social-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  padding-left: 23px;
+  /* padding-right: 23px; */
+
+}
+
+.footer-social-list a {
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin-right: 23px;
+
+  font-size: 0px;
+  list-style: none;
+}
+
+.fb {
+  background-image: url("../img/svg/fb-logo.svg");
+  opacity: 0.3;
+}
+
+.inst {
+  background-image: url("../img/svg/inst-logo.svg");
+  opacity: 0.3;
+}
+
+.tw {
+  background-image: url("../img/svg/tw-logo.svg");
+  opacity: 0.3;
+}
+
+.fb:hover,
+.fb:focus,
+.inst:hover,
+.inst:active,
+.tw:hover,
+.tw:active {
+  opacity: 1;
+}
+
+.fb:active,
+.inst:active,
+.tw:active {
+  opacity: 0.1;
+}
+
+/* -------------footer-right-block--------------- */
+
+.footer-right-block {
+  width: 355px;
+}
+
+.footer-user-block {
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  margin: 0;
+  margin-bottom: 35px;
+  padding: 0;
+}
+
+.footer-user-block a {
+  display: block;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.footer-user-block li {
+  position: relative;
+  margin-right: 66px;
+}
+
+.footer-user-block li:last-child {
+  margin-right: 0px;
+}
+
+.footer-user-block li:hover,
+.footer-user-block a:focus {
+  opacity: 0.6;
+}
+
+.footer-user-block a:active {
+  opacity: 0.3;
+}
+
+.footer-user-block li:nth-of-type(1)::before {
+  position: absolute;
+  top: 8px;
+  left: -26px;
+  content: "";
+
+  height: 12px;
+  width: 13px;
+  background-image: url("../img/svg/user-icon-yellow.svg");
+}
+
+.footer-user-block li:nth-of-type(2)::before {
+  position: absolute;
+  top: 8px;
+  left: -21px;
+  content: "";
+
+  height: 10px;
+  width: 10px;
+  background-image: url("../img/svg/compare-icon-yellow.svg");
+}
+
+.footer-user-block li:nth-of-type(3)::before {
+  position: absolute;
+  top: 8px;
+  left: -25px;
+  content: "";
+
+  height: 12px;
+  width: 12px;
+  background-image: url("../img/svg/cart-icon-yellow.svg");
+}
+
+.footer-right-block p {
+  color: #ffffff;
+  text-align: right;
+}
+
+.academy-link {
+  position: absolute;
+  right: 2px;
+  bottom: 65px;
+
+  display: block;
+  width: 27px;
+  height: 35px;
+
+  font-size: 0px;
+
+  background-image: url("../img/svg/logo-html.svg")
+}
+
+.academy-link:hover,
+.academy-link:focus {
+  opacity: 0.6;
+}
+
+.academy-link:active {
+  opacity: 0.3;
+}
+
+.modal {
+  display: none;
 }
